crates/module-system/sov-modules-macros/tests/integration/trybuild/constants/bech32_constant_prefix_too_long.stderr
error[E0080]: evaluation of constant value failed
 --> tests/integration/trybuild/constants/bech32_constant_prefix_too_long.rs:6:26
  |
6 | const TOKEN: MyTokenId = config_value!("CONST_TOKEN_ID");
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'The constant named `CONST_TOKEN_ID` with value `token_1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqnfxkwm` is a valid bech32 string but its prefix `token_` does not match the expected prefix for the type `MyTokenId`.', $DIR/tests/integration/trybuild/constants/bech32_constant_prefix_too_long.rs:6:26
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)
